--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "auth-client-firebase",
   "version": "1.1.1",
   "description": "Firebase Auth Hook",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
