--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/Explosmac/use-firebase#readme",
   "devDependencies": {
-    "firebase": "^9.14.0",
     "prettier": "^2.7.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "firebase": "^9.14.0"
   }
 }
