--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "1.1.4",
   "description": "Firebase Auth Hook",
   "main": "index.ts",
+  "scripts": {
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepublishOnly": "npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Explosmac/use-firebase.git"
