--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "auth-client-firebase",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Firebase Auth Hook",
   "main": "index.ts",
   "scripts": {
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
     "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
+    "version": "git add -A src",
     "postversion": "git push && git push --tags"
   },
   "repository": {
