--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "auth-client-firebase",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Firebase Auth Hook",
   "main": "index.ts",
   "scripts": {
     "lint": "tslint -p tsconfig.json",
     "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
-    "version": "git add -A src",
+    "version": "git add -A .",
     "postversion": "git push && git push --tags"
   },
   "repository": {
