--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "auth-client-firebase",
   "version": "1.1.15",
   "description": "Firebase Auth Hook",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
     "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
     "version": "git add -A .",
