--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
     "target": "es5",
     "module": "commonjs",
     "declaration": true,
-    "strict": true
-  }
+    "strict": true,
+    "outDir": "./"
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "**/__tests__/*"]
 }
